<resources>
    <string name="app_name">TurkeyTimer</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
    <string name="save_button">Save</string>
    <string name="saved_time">Tap2Save</string>
    <string name="instructions">Tap a WITCH to save and send</string>
    <string name="time_text">00:00:00</string>
</resources>
