<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geogehigbie.turkeytimestopwatch2.MainActivity"
    android:background="@color/colorBackground">


    <ImageView
        android:id="@+id/turkeyIconLarge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="160dp"
        android:maxWidth="160dp"
        android:scaleType="fitCenter"
        android:layout_centerInParent="true"
        android:src="@drawable/colorful_turkey"
        android:visibility="gone"
        />

    <ImageView
        android:id="@+id/turkeyIconLargeBackWard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="160dp"
        android:maxWidth="160dp"
        android:scaleType="fitCenter"
        android:layout_centerInParent="true"
        android:src="@drawable/colorful_turkey"
        android:visibility="gone"
        android:scaleX="-1" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/time_text"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="80sp" />

    <LinearLayout
        android:id="@+id/linear_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_view"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onClickStart"
            android:text="@string/start_button"
            android:background="@drawable/button_rounded"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onClickStop"
            android:text="@string/stop_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/button_rounded"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onClickReset"
            android:text="@string/reset_button"
            android:background="@drawable/button_rounded"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutBottom"
        android:text="@string/instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayoutBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/turkeyIcon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="75dp"
                android:maxWidth="75dp"
                android:scaleType="fitCenter"
                android:src="@drawable/colorful_turkey"
                android:onClick="onClickSave1"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/saved1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#121111"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="onClickSave2">


            <ImageView
                android:id="@+id/turkeyIcon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="75dp"
                android:maxWidth="75dp"
                android:scaleType="fitCenter"
                android:src="@drawable/colorful_turkey"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/saved2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#121111"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:onClick="onClickSave3">

            <ImageView
                android:id="@+id/turkeyIcon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="75dp"
                android:maxWidth="75dp"
                android:scaleType="fitCenter"
                android:src="@drawable/colorful_turkey"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/saved3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#121111"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:onClick="onClickSave4">

            <ImageView
                android:id="@+id/turkeyIcon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="75dp"
                android:maxWidth="75dp"
                android:scaleType="fitCenter"
                android:src="@drawable/colorful_turkey"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/saved4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved_time"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#121111"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
